objects/Pebble_App__c.object
<CustomObject>
    <description>The application that will show on the Pebble screen.</description>
    <fields>
        <fullName>Active__c</fullName>
        <description>The status of the App to control deployment status.  &apos;Active&apos; is the only one that will be shown on the Pebble.</description>
        <inlineHelpText>The status of the App to control deployment status.  &apos;Active&apos; is the only one that will be shown on the Pebble.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AppSubTitle__c</fullName>
        <label>Subtitle</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppTitle__c</fullName>
        <label>Title</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Pebble App</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AppTitle__c</columns>
        <columns>AppSubTitle__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pebble App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pebble Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>